<resources>
    <string name="app_name">Bitcoin Prices</string>
    <string name="bitcoin_prices">Bitcoin prices</string>
    <string name="bitcoin_trade">Bitcoin trade</string>
    <string name="sell_label">SELL</string>
    <string name="buy_label">BUY</string>
    <string name="level1_label"><![CDATA[Level 1<br/>&caron;]]></string>

    <string name="amount_currency">Amount (%s)</string>
    <string name="units">Units</string>
    <string name="level2_label">Level 1 ˅</string>
    <string name="confirm_button">Confirm</string>

    <string name="error_msg">Error calling Server</string>
    <string name="no_internet">Internet not available!</string>
    <string name="error_message">There was an error updating prices, please try again later.</string>

    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
</resources>